1.8 (*)
  * Add a warning when computing statistics of ROC curve with AUC = 1.
  * Fixed bug where 'ci.coords' with 'x="best"' would fail if one or more resampled ROC curve had multiple "best" thresholds. 

1.7.1 (2014-02-20)
  * Close SOCK cluster on Windows with parallel=TRUE
  * Fixed really use algorithm 1 when microbenchmark fails

1.7 (2014-02-19)
  * Faster algorithm for DeLong 'roc.test', 'power.roc.test', 'ci.auc', 'var' and 'cov' function (no large matrix allocation).
  * Handling Math and Operations correctly on 'auc' and 'ci' objects (see '?groupGeneric.pROC')
  * The 'formula' for 'roc.formula' can now provide several predictors and a list of ROC curves will be returned
  * Fixed documentation of 'ci.coords' with examples
  * Fixed binormal AUC computed with triangulation despite the claim in the documentation
  * Fixed unstated requirement on Rcpp >= 0.10.5

1.6.0.1 (2013-12-28)
  * Removed erroneous error message displayed when predictors and responses were not vectors

1.6 (2013-12-26)
  * New 'power.roc.test' function for sample size and power computations
  * New 'cov' and 'var' functions supports new "obuchowski" method
  * New 'ci.coords' function to compute CI of arbitrary coords
  * 'coords' accepts new 'ret' value "1-accuracy"
  * Introducing various algorithms to compute sensitivities and specificites, with a more vectorized code or Rcpp. See 'algorithm' in ?roc for more details on the trade-offs of the different methods.
  * Faster algorithm for DeLong 'roc.test', 'ci', 'var' and 'cov' function (thanks Kazuki Yoshida).
  * 'are.paired' now also checks for identical 'levels'
  * Fixed a warning generated in the examples
  * Fixed several bugs related with 'smooth.roc' curves
  * Additional input data sanity checks
  * Now requires R >= 2.13 (in fact, since 1.5.1, thanks Emmanuel Curis for the report)
  * Progress bars now defaults to text on Macs where 'tcltk' seems broken (thanks Gerard Smits for the report)

1.5.4 (2012-08-31)